# snework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
analysis/: freqanalysis.py  freqout.py  spikeanalyser.py  spikechart.py  testanalysis.py
header/: constant.h  function.h  generator.h  method.h  pulsegen.h
infrastructure/: analysis.js  jobs.js  params.js  process.js
interface/: main.js  package-lock.json  package.json
snedata/: readme.txt
source/: constant.c  main.c  method.c
tool/: bintest.js
